--- a/Starter_Code/Starter_Code/NoSQL_setup_starter.ipynb
+++ b/Starter_Code/Starter_Code/NoSQL_setup_starter.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "3ecdd008",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "59390c4a",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "id": "7f9ececa",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "id": "71e373c1",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "ef1b89ed",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "id": "6a0d92df",
    "metadata": {},
    "outputs": [
@@ -110,32 +110,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'AddressLine1': 'East Cliff Pavilion',\n",
-      " 'AddressLine2': 'Wear Bay Road',\n",
-      " 'AddressLine3': 'Folkestone',\n",
+      "{'AddressLine1': 'The Pines Garden',\n",
+      " 'AddressLine2': 'Beach Road',\n",
+      " 'AddressLine3': 'St Margarets Bay',\n",
       " 'AddressLine4': 'Kent',\n",
-      " 'BusinessName': 'The Pavilion',\n",
-      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
-      " 'BusinessTypeID': 1,\n",
+      " 'BusinessName': 'The Pines Calyx',\n",
+      " 'BusinessType': 'Other catering premises',\n",
+      " 'BusinessTypeID': 7841,\n",
       " 'ChangesByServerID': 0,\n",
-      " 'Distance': 4591.765489457773,\n",
-      " 'FHRSID': 1043695,\n",
-      " 'LocalAuthorityBusinessID': 'PI/000073616',\n",
-      " 'LocalAuthorityCode': '188',\n",
-      " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
-      " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
-      " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
+      " 'Distance': 4587.362402580997,\n",
+      " 'FHRSID': 254250,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000066174',\n",
+      " 'LocalAuthorityCode': '182',\n",
+      " 'LocalAuthorityEmailAddress': 'publicprotection@dover.gov.uk',\n",
+      " 'LocalAuthorityName': 'Dover',\n",
+      " 'LocalAuthorityWebSite': 'http://www.dover.gov.uk/',\n",
       " 'NewRatingPending': False,\n",
       " 'Phone': '',\n",
-      " 'PostCode': 'CT19 6BL',\n",
-      " 'RatingDate': '2018-04-04T00:00:00',\n",
+      " 'PostCode': 'CT15 6DZ',\n",
+      " 'RatingDate': '2021-08-17T00:00:00',\n",
       " 'RatingKey': 'fhrs_5_en-gb',\n",
       " 'RatingValue': '5',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('6594a941a6717537e75f5657'),\n",
-      " 'geocode': {'latitude': '51.083812', 'longitude': '1.195625'},\n",
-      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
+      " '_id': ObjectId('65971b0f8e9e84e073b7f524'),\n",
+      " 'geocode': {'latitude': '51.148133', 'longitude': '1.383298'},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/254250',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
       "          'extractDate': '0001-01-01T00:00:00',\n",
@@ -145,7 +145,7 @@
       "          'returncode': None,\n",
       "          'totalCount': 0,\n",
       "          'totalPages': 0},\n",
-      " 'scores': {'ConfidenceInManagement': 5, 'Hygiene': 5, 'Structural': 5}}\n"
+      " 'scores': {'ConfidenceInManagement': 0, 'Hygiene': 0, 'Structural': 0}}\n"
      ]
     }
    ],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "id": "11c9f11b",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "id": "c2da7648",
    "metadata": {},
    "outputs": [],
@@ -221,17 +221,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "id": "a6e5cece",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertOneResult at 0x278d085fb00>"
+       "<pymongo.results.InsertOneResult at 0x1fe598f7a40>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "id": "63bb10f9",
    "metadata": {},
    "outputs": [
@@ -257,7 +257,7 @@
       " 'AddressLine4': '',\n",
       " 'BusinessName': 'Penang Flavours',\n",
       " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
-      " 'BusinessTypeID': 1,\n",
+      " 'BusinessTypeID': '',\n",
       " 'Distance': 4623.972328074718,\n",
       " 'LocalAuthorityCode': '511',\n",
       " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
@@ -268,7 +268,7 @@
       " 'PostCode': 'SE18 7DY',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('6594ac03fa840ea95fc80be1'),\n",
+      " '_id': ObjectId('65971b22cdda328ff7e4afe6'),\n",
       " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
       " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
      ]
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 32,
    "id": "93c63829",
    "metadata": {},
    "outputs": [
@@ -301,49 +301,49 @@
      "text": [
       "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
-      " '_id': ObjectId('6594a941a6717537e75f5657')}\n",
+      " '_id': ObjectId('65971b0f8e9e84e073b7f526')}\n",
       "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
-      " '_id': ObjectId('6594a941a6717537e75f5664')}\n",
+      " '_id': ObjectId('65971b0f8e9e84e073b7f527')}\n",
       "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
-      " '_id': ObjectId('6594a941a6717537e75f5666')}\n",
+      " '_id': ObjectId('65971b0f8e9e84e073b7f529')}\n",
       "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
-      " '_id': ObjectId('6594a941a6717537e75f5667')}\n",
+      " '_id': ObjectId('65971b0f8e9e84e073b7f52a')}\n",
       "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
-      " '_id': ObjectId('6594a941a6717537e75f566a')}\n",
+      " '_id': ObjectId('65971b0f8e9e84e073b7f52b')}\n",
       "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
-      " '_id': ObjectId('6594a941a6717537e75f567a')}\n",
+      " '_id': ObjectId('65971b0f8e9e84e073b7f52c')}\n",
       "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
-      " '_id': ObjectId('6594a941a6717537e75f567f')}\n",
+      " '_id': ObjectId('65971b0f8e9e84e073b7f52f')}\n",
       "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
-      " '_id': ObjectId('6594a941a6717537e75f5683')}\n",
+      " '_id': ObjectId('65971b0f8e9e84e073b7f530')}\n",
       "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
-      " '_id': ObjectId('6594a941a6717537e75f5687')}\n",
+      " '_id': ObjectId('65971b0f8e9e84e073b7f532')}\n",
       "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
-      " '_id': ObjectId('6594a941a6717537e75f5688')}\n",
+      " '_id': ObjectId('65971b0f8e9e84e073b7f536')}\n",
       "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
-      " '_id': ObjectId('6594a941a6717537e75f568b')}\n",
+      " '_id': ObjectId('65971b0f8e9e84e073b7f537')}\n",
       "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
-      " '_id': ObjectId('6594a941a6717537e75f568d')}\n",
+      " '_id': ObjectId('65971b0f8e9e84e073b7f538')}\n",
       "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
-      " '_id': ObjectId('6594a941a6717537e75f569a')}\n",
+      " '_id': ObjectId('65971b0f8e9e84e073b7f542')}\n",
       "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
-      " '_id': ObjectId('6594a941a6717537e75f56a3')}\n",
+      " '_id': ObjectId('65971b0f8e9e84e073b7f545')}\n",
       "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
-      " '_id': ObjectId('6594a941a6717537e75f56a4')}\n"
+      " '_id': ObjectId('65971b0f8e9e84e073b7f54a')}\n"
      ]
     }
    ],
@@ -370,17 +370,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "id": "7f599f3d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x278d0aa7d00>"
+       "<pymongo.results.UpdateResult at 0x1fe5b6e0240>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "id": "a6ad16f7",
    "metadata": {},
    "outputs": [
@@ -419,7 +419,7 @@
       " 'PostCode': 'SE18 7DY',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('6594ac03fa840ea95fc80be1'),\n",
+      " '_id': ObjectId('65971b22cdda328ff7e4afe6'),\n",
       " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
       " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
      ]
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 35,
    "id": "768474a6",
    "metadata": {},
    "outputs": [
@@ -461,17 +461,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "id": "a11d5f1b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.DeleteResult at 0x278d0aa55c0>"
+       "<pymongo.results.DeleteResult at 0x1fe59a535c0>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 37,
    "id": "2a51aba0",
    "metadata": {},
    "outputs": [
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "id": "8c356f7b",
    "metadata": {},
    "outputs": [
@@ -534,7 +534,7 @@
       " 'RatingValue': '5',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('6594a941a6717537e75f5657'),\n",
+      " '_id': ObjectId('65971b0f8e9e84e073b7f80b'),\n",
       " 'geocode': {'latitude': '51.083812', 'longitude': '1.195625'},\n",
       " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
       "            'rel': 'self'}],\n",
@@ -576,17 +576,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 39,
    "id": "fd4112ce",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x278d063d780>"
+       "<pymongo.results.UpdateResult at 0x1fe5b6617c0>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,17 +608,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 40,
    "id": "04430a5b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x278d063c3c0>"
+       "<pymongo.results.UpdateResult at 0x1fe5b6ab5c0>"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,17 +631,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 41,
    "id": "92524ccc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x278d063d500>"
+       "<pymongo.results.UpdateResult at 0x1fe59a53640>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 42,
    "id": "0deacaf9",
    "metadata": {},
    "outputs": [
@@ -684,7 +684,7 @@
       " 'RatingValue': 5,\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('6594a941a6717537e75f5657'),\n",
+      " '_id': ObjectId('65971b0f8e9e84e073b7f80b'),\n",
       " 'geocode': {'latitude': 51.083812, 'longitude': 1.195625},\n",
       " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
       "            'rel': 'self'}],\n",
